[b]Version 0.5.61[/b] (not released yet):

(2007-10-08)
 * Updated the Polish translation.

(2007-10-07)
 * (Windows) Added a new section in Preferences to associate file types with
   SMPlayer. Patch by Florin Braghis (florin@libertv.ro).

(2007-10-06)
 * Updated the Polish translation.
 * Added two new options for the configuration file, in section [defaults]:
   initial_audio_track and initial_subtitle_track. When a new file is played
   the values of these options will be used to select the audio and subtitle
   tracks. The first track is 0 (not 1). If the value is wrong, the first
   track will be used. The default value for both options is 0.
   Note: the "Preferred audio and subtitles" in Preferences->General will have
   preference over these options.
 * Added "Arabic (CP1256)" to the list of encodings for subtitles.

(2007-10-05)
 * Now the icon for Windows (smplayer.ico) is bigger (48x48).
 * Updated the Chinese (zh_CN) translation.
 * Commented code to use an intermediate program for mplayer, 'cos it doesn't
   work at all.
 * Added new option for command line: -no-close-at-end, which is the opposite
   of -close-at-end.
 * Added two new options for command line: -fullscreen and -no-fullscreen.
   -fullscreen will play the video in fullscreen mode, while -no-fullscreen
   will play it in window mode. For simplification these options just modify 
   the option "Start videos in fullscreen" in Preferences->General->Video and 
   audio.

(2007-10-04)
 * Added some code to use an intermediate program for mplayer, when using
   Windows 98 and ME. Not tested yet. (Written in linux)

(2007-10-02)
 * Ported to Qt 4 the old code to handle subtitles. It seems we may need it.

(2007-10-01)
 * Added a work-around to try to fix a problem in windows. When using gl/gl2,
   minimize the window, when restored the video is black. The only fix I
   found until now is to restart mplayer.
 * Try to keep the video paused when changing volume. It doesn't work well